--- a/templates/write.html
+++ b/templates/write.html
@@ -1,20 +1,173 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
-<title>write.jsp</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+    <title>ÏÉà Í∏Ä ÏûëÏÑ±</title>
 </head>
+
+<style>
+    * {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 10px;
+}
+
+ul, li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.board_wrap {
+    width: 1000px;
+    margin: 100px auto;
+}
+
+.board_title {
+    margin-bottom: 30px;
+}
+
+.board_title strong {
+    font-size: 3rem;
+}
+
+.board_title p {
+    margin-top: 5px;
+    font-size: 1.4rem;
+}
+
+.bt_wrap {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 0;
+}
+
+.bt_wrap a {
+    display: inline-block;
+    min-width: 80px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 2px;
+    font-size: 1.4rem;
+}
+
+.bt_wrap a:first-child {
+    margin-left: 0;
+}
+
+.bt_wrap a.on {
+    background: #000;
+    color: #fff;
+}
+
+.board_write {
+    border-top: 2px solid #000;
+}
+
+.board_write .title,
+.board_write .info {
+    padding: 15px;
+}
+
+.board_write .info {
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px solid #000;
+    font-size: 0;
+}
+
+.board_write .title dl {
+    font-size: 0;
+}
+
+.board_write .info dl {
+    display: inline-block;
+    width: 50%;
+    vertical-align: middle;
+}
+
+.board_write .title dt,
+.board_write .title dd,
+.board_write .info dt,
+.board_write .info dd {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 1.4rem;
+}
+
+.board_write .title dt,
+.board_write .info dt {
+    width: 100px;
+}
+
+.board_write .title dd {
+    width: calc(100% - 100px);
+}
+
+.board_write .title input[type="text"],
+.board_write .info input[type="text"],
+.board_write .info input[type="password"] {
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.board_write .title input[type="text"] {
+    width: 80%;
+}
+
+.board_write .cont {
+    border-bottom: 1px solid #000;
+}
+
+.board_write .cont textarea {
+    display: block;
+    width: 100%;
+    height: 300px;
+    padding: 15px;
+    box-sizing: border-box;
+    border: 0;
+    resize: vertical;
+}
+
+</style>
+<script>
+
+</script>
 <body>
-	<div>
-		¡¶∏Ò : <input type="text" name="title" placeholder="¡¶∏Ò" />
-		<br/>
-		±€æ¥¿Ã : <input type="text" name="writer" placeholder="¿€º∫¿⁄"  />
-		<br/>
-		≥ªøÎ
-		<br/>
-		<textarea name="contents" rows="5" cols="50" ></textarea>
-		<br/>
-		<input type="submit" />&nbsp;
-	</div>
+    <div class="board_wrap">
+        <div class="board_title">
+            <strong>ÏÉà Í∏Ä ÏûëÏÑ±</strong>
+            <p>Îã§Î•∏ ÏÇ¨ÎûåÏóêÍ≤å ÏùºÏÉÅÏùÑ Í≥µÏú†Ìï¥Î≥¥ÏÑ∏Ïöî.</p>
+        </div>
+        <div class="board_write_wrap">
+            <div class="board_write">
+                <div class="title">
+                    <dl>
+                        <dd><input type="text" placeholder="Ï†úÎ™© ÏûÖÎ†•"></dd>
+                    </dl>
+                </div>
+                <div class="info">
+                    <input type="file" id="real-input" class="image_inputType_file" accept="img/*" required multiple>
+                </div>
+                <div class="cont">
+                    <textarea placeholder="ÎÇ¥Ïö© ÏûÖÎ†•"></textarea>
+                </div>
+            </div>
+            <div class="bt_wrap">
+                <a href="mypage.html" class="on">ÏûëÏÑ±</a>
+                <a href="main.html">ÎÇòÍ∞ÄÍ∏∞</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+
