메인페이지- flask 이동까지 완료
메인페이지 프론트 완성했습니다

--- a/static/css/mainpage_boards.css
+++ b/static/css/mainpage_boards.css
@@ -3,7 +3,7 @@
   margin: 50px 25px;
 
   display: grid;
-  grid-template-columns: 1fr;
+  /*grid-template-columns: 1fr;*/
   grid-template-rows: auto;
   grid-gap: 20px;
 }
