--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,6 +30,7 @@
                     <option value="제주">제주</option>
                     <option value="해외">해외</option>
                 </select>
+                <input type="text" placeholder="사용할 ID 를 입력해주세요." name="userId"/>
                 <input type="text" placeholder="이메일을 입력해주세요." name="email"/>
                 <input type="text" placeholder="이름을 입력해주세요." name="name"/>
                 <input type="password" placeholder="비밀번호를 입력해주세요."name="password"/>
