--- a/templates/main.html
+++ b/templates/main.html
@@ -5,30 +5,25 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>I-Log</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_reset.css') }}">
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_variable.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_variable.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_main.css') }}">
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_nav.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_nav.css') }}">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_boards.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_sorting.css') }}">
 
 
 </head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    {% block head %}
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/javascript/main.js"></script>
-    <title>Main</title>
-    {% endblock %}
+<meta charset="UTF-8">
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% block head %}
+<title>Main</title>
+{% endblock %}
 </head>
 <body>
 {% block body %}
@@ -39,7 +34,7 @@
         <a href="search.html" class="nav__column--search-btn">
             <i class="fas fa-search fa-xl"></i>
         </a>
-        <a href="login.html" class="nav__column--login-btn">로그인</a>
+        <a href="login" class="nav__column--login-btn">로그인</a>
     </div>
 </nav>
 
@@ -671,8 +666,6 @@
         crossorigin="anonymous"
 ></script>
 {% endblock %}
-
-
 
 
 </body>
