--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 <div>
     <div class="signup-page">
         <div class="form">
-            <form class="login-form" action="/user/signup" method="POST">
+            <form class="login-form" action="/users/signup" method="POST">
                 <select class="location" name="location" id="location">
                     <option value="">지역을 선택해 주세요.</option>
                     <option value="경기">경기</option>
