--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,23 @@
 {% block head %}
 <link rel="stylesheet" href="/static/css/login.css">
 <script src="/static/javascript/login.js"></script>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <script>
+        alert("{{messages[-1]}}")
+    </script>
+    {% endif %}
+{% endwith%}
 <title>LOGIN</title>
 {% endblock %}
 {% block body %}
 <div>
     <div class="login-page">
         <div class="form">
-            <form class="login-form">
-                <input type="text" placeholder="username"/>
-                <input type="password" placeholder="password"/>
-                <button>login</button>
+            <form class="login-form" action="/users/login" method="POST">
+                <input type="text" placeholder="username" name="userId"/>
+                <input type="password" placeholder="password" name="password"/>
+                <button type="submit">login</button>
                 <p class="message"><a href="signup">Sign Up</a></p>
             </form>
         </div>
