10th 회원가입 로그인 기능 대충 완료 (+테이블 수정)

--- a/templates/main.html
+++ b/templates/main.html
@@ -31,7 +31,7 @@
     <a href="main.html" class="nav__column">I-log</a>
     <div class="nav__column">
         {% if login == True %}
-        <h3>{{usernm}}님 어서오세요!</h3>
+        <h3>{{name}}님 어서오세요!</h3>
         <a href="logout">로그아웃</a>
         {% else %}
         <a href="/users/login" class="nav__column--login-btn">로그인</a>
