--- a/templates/write.html
+++ b/templates/write.html
@@ -1,39 +1,70 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <title>게시판 글쓰기</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
-    <link rel="stylesheet" href="/static/css/write.css">
-    <title>새 글 작성</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+<style>
+    .btn-default {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 15px;
+</style>
+<script>
+    $(document).ready(function () {
+    save_board();
+});
 
-<body>
-    <div class="board_wrap">
-        <div class="board_title">
-            <strong>새 글 작성</strong>
-            <p>다른 사람에게 일상을 공유해보세요.</p>
-        </div>
-        <div class="board_write_wrap">
-            <div class="board_write">
-                <div class="title">
-                    <dl>
-                        <dd><input type="text" placeholder="제목 입력"></dd>
-                    </dl>
-                </div>
-                <div class="info">
-                    <input type="file" id="real-input" class="image_inputType_file" accept="img/*" required multiple>
-                </div>
-                <div class="cont">
-                    <textarea placeholder="내용 입력"></textarea>
-                </div>
-            </div>
-            <div class="bt_wrap">
-                <a href="mypage.html" class="on">작성</a>
-                <a href="main.html">나가기</a>
-            </div>
-        </div>
+function save_board() {
+    let title = $("#title").val();
+    let content = $("#content").val();
+
+    //   if (title === "" || content === "") {
+    //     alert("작성해주세요.");
+    //     return;
+    // }
+    $.ajax({
+        type: "POST",
+        url: "/i_one/board",
+        data: {
+            'title': title,
+            'content': content
+        },
+        success: function (response) {
+            alert(response["msg"]);
+            window.location.reload();
+        }
+    });
+}
+
+</script>
+
+<div class="container">
+  <h2>게시판 글쓰기</h2>
+  <form action="write.jsp" method="post">
+    <div class="form-group">
+      <label for="title">제목</label>
+      <input type="text" class="form-control" id="title"
+       placeholder="제목 입력" name="title"
+       maxlength="100" required="required"
+       pattern=".{1,100}">
     </div>
+    <div class="form-group">
+   <label for="content">내용</label>
+   <textarea class="form-control" rows="5" id="content"
+    name="content" placeholder="내용 작성"></textarea>
+    </div>
+      <div class="info">
+          <dt>파일 첨부</dt>
+          <input type="file" id="real-input" class="image_inputType_file" accept="img/*" required multiple>
+      </div>
+    <button type="submit" class="btn btn-default">작성</button>
+  </form>
+</div>
 </body>
 </html>
