11th 회원가입 로그인 기능 대충 완료 (+bcrypt 비밀번호 암호화 완료)

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,11 +30,11 @@
                     <option value="제주">제주</option>
                     <option value="해외">해외</option>
                 </select>
-                <input type="text" placeholder="사용할 ID 를 입력해주세요." name="userId"/>
-                <input type="text" placeholder="이메일을 입력해주세요." name="email"/>
-                <input type="text" placeholder="이름을 입력해주세요." name="name"/>
-                <input type="password" placeholder="비밀번호를 입력해주세요."name="password"/>
-                <input type="password" placeholder="비밀번호를 다시 입력해주세요."/>
+                <input type="text" placeholder="사용할 ID 를 입력해주세요." name="userId" id="userId"/>
+                <input type="text" placeholder="이메일을 입력해주세요." name="email" id="email"/>
+                <input type="text" placeholder="이름을 입력해주세요." name="name" id="name"/>
+                <input type="password" placeholder="비밀번호를 입력해주세요."name="password" id="password"/>
+                <input type="password" placeholder="비밀번호를 다시 입력해주세요." id="checked_password"/>
                 <span class="gender">
                 <label><input type="radio" name="gender" value="1" checked>남성</label>
                 <label><input type="radio" name="gender" value="2">여성</label>
