--- a/templates/write.html
+++ b/templates/write.html
@@ -1,9 +1,93 @@
-{% extends 'main.html' %}
-{% block head %}
-<title>WRITE</title>
-{% endblock %}
-{% block body %}
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>게시판 글쓰기</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<style>
+    .btn-default {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 15px;
+</style>
+<script>
+    $(document).ready(function () {
+    save_board();
+});
 
-<div>여기 작업하면 됩니다.</div>
+function save_board() {
+    let title = $("#title").val();
+    let content = $("#content").val();
 
-{% endblock %}
+    //   if (title === "" || content === "") {
+    //     alert("작성해주세요.");
+    //     return;
+    // }
+    $.ajax({
+        type: "POST",
+        url: "/boards/board",
+        data: {
+            'id': userId,
+            'title': title,
+            'content': content
+        },
+        success: function (response) {
+            alert(response["msg"]);
+            window.location.reload();
+        }
+    });
+}
+
+</script>
+
+<div class="container">
+  <h2>게시판 글쓰기</h2>
+  <form action="write.jsp" method="post">
+    <div class="form-group">
+      <label for="title">제목</label>
+      <input type="text" class="form-control" id="title"
+       placeholder="제목 입력" name="title"
+       maxlength="100" required="required"
+       pattern=".{1,100}">
+    </div>
+    <div class="form-group">
+   <label for="content">내용</label>
+   <textarea class="form-control" rows="5" id="content"
+    name="content" placeholder="내용 작성"></textarea>
+    </div>
+      <div class="info">
+          <dt>파일 첨부</dt>
+          <input type="file" id="real-input" class="image_inputType_file" accept="img/*" required multiple>
+      </div>
+    <button type="submit" class="btn btn-default">작성</button>
+  </form>
+</div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--{% extends 'main.html' %}-->
+<!--{% block head %}-->
+<!--<title>WRITE</title>-->
+<!--{% endblock %}-->
+<!--{% block body %}-->
+
+<!--<div>여기 작업하면 됩니다.</div>-->
+
+<!--{% endblock %}-->
