13th 회원 가입 로그인 기능 완료 (+bcrypt 비밀 번호 암호화 완료, 정규 표현식 완료)

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,10 +31,10 @@
                     <option value="해외">해외</option>
                 </select>
                 <input type="text" placeholder="사용할 ID 를 입력해주세요." name="userId" id="userId"/>
-                <input type="text" placeholder="이메일을 입력해주세요." name="email" id="email"/>
-                <input type="text" placeholder="이름을 입력해주세요." name="name" id="name"/>
                 <input type="password" placeholder="비밀번호를 입력해주세요."name="password" id="password"/>
                 <input type="password" placeholder="비밀번호를 다시 입력해주세요." id="checked_password"/>
+                <input type="text" placeholder="이름을 입력해주세요." name="name" id="name"/>
+                <input type="text" placeholder="이메일을 입력해주세요." name="email" id="email"/>
                 <span class="gender">
                 <label><input type="radio" name="gender" value="1" checked>남성</label>
                 <label><input type="radio" name="gender" value="2">여성</label>
@@ -47,6 +47,7 @@
 <div  id="data">
     {{ data }}
 </div>
-
-{% endblock %}
+<!--javascript 적용이 안되는게 있을때는 body 태그 맨 아래 해주면 된다고 합니다.-->
 <script src="/static/javascript/signup.js"></script>
+{% endblock %}
+
