--- a/templates/write.html
+++ b/templates/write.html
@@ -86,10 +86,10 @@
 
             <input type="file"   id="content_image" name="content_image" class="image_inputType_file" accept="img/*" required multiple>
 
-      <div class="info">
-          <dt>파일 첨부</dt>
-<!--          <input type="file" id="realinput" class="image_inputType_file" accept="img/*" required multiple>-->
-      </div>
+<!--      <div class="info">-->
+<!--          <dt>파일 첨부</dt>-->
+<!--&lt;!&ndash;          <input type="file" id="realinput" class="image_inputType_file" accept="img/*" required multiple>&ndash;&gt;-->
+<!--      </div>-->
     <button type="submit" class="btn btn-default">작성</button>
   </form>
 </div>
