--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_boards.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_sorting.css') }}">
 
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
 </head>
 <meta charset="UTF-8">
@@ -27,40 +29,6 @@
 </head>
 <body>
 
-
-
-
-<script>
-    const user_tbody = document.querySelector('#users tbody');
-    let tr = ``
-    axios.get('/user')
-        .then(function (response) {
-            // 성공 핸들링
-            console.log(response);
-            response.data.map((user) => {
-
-             tr += `
-                 <tr>
-                    <td>${user[2]}${user[1]}</td>
-                    <td>${user[3]}</td>
-                    <td>${user[4]}</td>
-                    <td><img src="${user[5]}" alt="${user[5]}"></td>
-                    <td>${user[10]}</td>
-                    <td>${user[8]}</td>
-                </tr>
-            `
-            })
-              user_tbody.innerHTML = tr
-        })
-        .catch(function (error) {
-            // 에러 핸들링
-            console.log(error);
-        })
-        .then(function () {
-            // 항상 실행되는 영역
-        });
-
-</script>
 
 
 {% block body %}
@@ -91,7 +59,7 @@
     </div>
 </div>
 
-<div class="board__parent">
+<div  class="board__parent" id="feed">
     <a class="board" href="#">
         <div
                 class="content__thumbnail"
@@ -130,9 +98,70 @@
             </div>
         </div>
     </a>
-
-
 </div>
+
+
+
+
+</body>
+<script>
+    const  feed = document.querySelector('#feed');
+    let a = ``
+    axios.get('/feed')
+        .then(function (response) {
+            // 성공 핸들링
+            console.log(response);
+             response.data.map((feed) => {
+
+             a += `<a class="board" href="#">
+        <div
+                class="content__thumbnail"
+                style="
+              background-image: url(${feed[3]});
+            "
+        ></div>
+        <!-- <img
+          class="content__thumbnail"
+          src="https://images.unsplash.com/photo-1670105791108-718c8d4b738e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"
+        /> -->
+
+        <!-- 여기서부터 content 제목div, 서브div, 작성일div -->
+        <div class="content__text">
+            <div class="content__title">
+                ${feed[1]}
+            </div>
+
+            <div class="content__sub">
+                ${feed[2]}
+            </div>
+            <div class="content__date">${feed[5]}</div>
+        </div>
+
+        <!-- 여기서부터 유저 정보 -->
+        <div class="user">
+            <div>
+                <img class="user__avatar" src="" alt=""/>
+                <span class="user__name">by </span>
+
+            </div>
+            <div>
+                <i class="fas fa-heart"></i>
+                <span>789</span>
+            </div>
+        </div>
+    </a>`
+            })
+              feed.innerHTML = a
+        })
+        .catch(function (error) {
+            // 에러 핸들링
+            console.log(error);
+        })
+        .then(function () {
+            // 항상 실행되는 영역
+        });
+
+</script>
 
 <script
         src="https://kit.fontawesome.com/af8a64a43c.js"
@@ -141,6 +170,6 @@
 {% endblock %}
 
 
-</body>
+
 
 </html>
