14th 회원 가입 로그인 기능 완료 (+bcrypt 비밀 번호 암호화 완료, 정규 표현식 완료 + aws RDS 사용 적용)

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,9 @@
 <title>LOGIN</title>
 {% endblock %}
 {% block body %}
+<nav>
+    <a href="/" class="nav__column">I-log</a>
+</nav>
 <div>
     <div class="login-page">
         <div class="form">
