--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,9 @@
 <title>SIGN UP</title>
 {% endblock %}
 {% block body %}
-
+<nav>
+    <a href="/" class="nav__column">I-log</a>
+</nav>
 <div>
     <div class="signup-page">
         <div class="form">
