write.html에서 글작성후 피드에 post들이 붙는 것까지 학인 완료

--- a/templates/main.html
+++ b/templates/main.html
@@ -141,7 +141,7 @@
         <div class="user">
             <div>
                 <img class="user__avatar" src="" alt=""/>
-                <span class="user__name">by </span>
+                <span class="user__name">by  ${feed[4]} </span>
 
             </div>
             <div>
