15th 회원 가입 로그인 기능 완료 (+bcrypt 비밀 번호 암호화 완료, 정규 표현식 완료 + aws RDS 사용 적용) 마이페이지 기능 완료 (TODO - FE) + 사진 업로드

--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -2,7 +2,7 @@
 
 .signup-page {
     width: 500px;
-    padding: 10% 0 0;
+    padding: -10% 0 0;
     margin: auto;
 }
 
@@ -126,4 +126,9 @@ body {
 .gender > label {
     display: inline-block;
     margin: 20px;
+}
+
+
+textarea {
+    margin-bottom: 20px;
 }
