--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,6 +41,8 @@
                 <label><input type="radio" name="gender" value="1" checked>남성</label>
                 <label><input type="radio" name="gender" value="2">여성</label>
                 </span>
+                <textarea cols="45" rows="10" wrap="hard" name="intro" id="intro" placeholder="간단한 자기소개를 해주세요"></textarea>
+<!--                <input type="textarea" placeholder="간단한 자기소개를 해주세요." name="intro" id="intro"/>-->
                 <button type="submit">Sign Up</button>
             </form>
         </div>
@@ -52,4 +54,8 @@
 <!--javascript 적용이 안되는게 있을때는 body 태그 맨 아래 해주면 된다고 합니다.-->
 <script src="/static/javascript/signup.js"></script>
 {% endblock %}
+
+
+
+
 
