--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1,61 +1,166 @@
-* {
-    font-family: 'Gowun Dodum', sans-serif;
+.body {
+    flex-direction: column;
 }
 
-.mypage_topBar {
-    display: flex;
-    height: 70px;
-    justify-content: space-between;
+.mypage_main {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: auto;
+    margin-top: -4%;
 }
 
-.mypage_topBar_title {
-    margin: 10px 0px 0px 10px;
+.mypage_header {
+    width: 100%;
+    height: 7rem;
+    margin: auto;
+    padding: 30px;
+    text-align: center;
+    /*border: 1px solid #000;*/
 }
 
-.topProfile_img {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
+.mypage_mid {
+    width: 30%;
+    height: 58rem;
+    margin: 100px auto;
+    padding: 30px;
+    text-align: center;
+    /*border: 1px solid #000;*/
+    position: relative;
+}
+
+.mypage_midbox {
+    width: 55rem;
+    height: 20rem;
+    margin: auto;
+    position: absolute;
+}
+
+.mypage_img {
+    width: 19rem;
+    height: 19rem;
+    margin: 30px auto 30px auto;
+    /*border: 1px solid #000;*/
     overflow: hidden;
-    border: 0px;
+    position: absolute;
+    left: 8.5vw;
 }
 
-.topProfile_triangle {
-    width: 0;
-    height: 0;
-    border-top: 12px solid black;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
+#user_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.mypage_topBar_right {
-    display: flex;
-    margin: 10px 10px 0px 0px;
-
+#mainimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.mypage_write_bt {
-    margin-right: 15px;
+.mypage_name {
+    width: 30%;
+    height: 15%;
+    margin: 20px auto 20px auto;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    position: absolute;
+    left: 9.25vw;
+    top: 35vh;
 }
 
-.mypage_profile {
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.mypage_email {
+    width: 30%;
+    height: 15%;
+    margin: 20px auto 20px auto;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    position: absolute;
+    left: 9.25vw;
+    top: 40vh;
 }
 
-.mypage_profile_img {
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    margin-right: 30px;
-    background-color: #EF3B3A;
-    border: 0px;
+.mypage_gender {
+    width: 30%;
+    height: 15%;
+    margin: 20px auto 20px auto;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    position: absolute;
+    left: 9.25vw;
+    top: 45vh;
 }
 
-.wrap {
-    max-width: 1200px;
-    width: 95%;
-    margin: 20px auto 0px auto;
+.mypage_location {
+    width: 30%;
+    height: 15%;
+    margin: 20px auto 20px auto;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    position: absolute;
+    left: 9.25vw;
+    top: 50vh;
 }
+
+.mypage_intro {
+    width: 30%;
+    height: 15%;
+    margin: 20px auto 20px auto;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.3rem;
+    position: absolute;
+    left: 9.25vw;
+    top: 55vh;
+}
+
+.editbtn {
+    width: 20rem;
+    height: 5rem;
+    /*border: 1px solid #000;*/
+    margin: 30px auto;
+    text-align: center;
+    line-height: 5rem;
+    font-size: 5rem;
+    position: absolute;
+    left: 8vw;
+    top: 70vh;
+}
+
+.mybtn, .homebtn {
+    width: 7rem;
+    height: 3rem;
+    border-radius: 15px;
+    border-width: 1px;
+    border-radius: 15px;
+    border-width: 1px;
+    /*border: 1px solid #000;*/
+}
+
+.mybtn, .homebtn > a {
+    font-size: 18px;
+    font-weight: bold;
+}
+/*.homebtn {*/
+/*    width: 7rem;*/
+/*    height: 3rem;*/
+/*    border-radius: 15px;*/
+/*    border-width: 1px;*/
+/*}*/
+
+a {
+    text-decoration: none;
+    color: black;
+    /*cursor: pointer;*/
+    /*background-color: aqua;*/
+}
+
