--- a/templates/write.html
+++ b/templates/write.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+
     <title>게시판 글쓰기</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
@@ -16,37 +17,58 @@
     font-size: 15px;
 </style>
 <script>
-    $(document).ready(function () {
-    save_board();
-});
+//     $(document).ready(function () {
+//     save_board();
+// });
+//
+// function save_board() {
+//     let title = $("#title").val();
+//     let content = $("#content").val();
+//
+//     //   if (title === "" || content === "") {
+//     //     alert("작성해주세요.");
+//     //     return;
+//     // }
+//     $.ajax({
+//         type: "POST",
+//         url: "/boards/board",
+//         data: {
+//             'id': userId,
+//             'title': title,
+//             'content': content
+//         },
+//         success: function (response) {
+//             alert(response["msg"]);
+//             window.location.reload();
+//         }
+//     });
+// }
+//
 
-function save_board() {
-    let title = $("#title").val();
-    let content = $("#content").val();
-
-    //   if (title === "" || content === "") {
-    //     alert("작성해주세요.");
-    //     return;
-    // }
-    $.ajax({
-        type: "POST",
-        url: "/i_one/board",
-        data: {
-            'title': title,
-            'content': content
-        },
-        success: function (response) {
-            alert(response["msg"]);
-            window.location.reload();
-        }
-    });
-}
 
 </script>
 
+<nav>
+    <a href="main.html" class="nav__column">I-log</a>
+    <div class="nav__column">
+        {% if login == True %}
+        <h3>{{id}} {{name}}님 어서오세요!</h3>
+
+        <a href="logout">로그아웃</a>
+        {% else %}
+        <a href="/users/login" class="nav__column--login-btn">로그인</a>
+        {% endif %}
+        <div><i class="fas fa-adjust fa-xl"></i></div>
+        <a href="search.html" class="nav__column--search-btn">
+            <i class="fas fa-search fa-xl"></i>
+        </a>
+    </div>
+</nav>
+
+
 <div class="container">
   <h2>게시판 글쓰기</h2>
-  <form action="write.jsp" method="post">
+  <form action="/write" method="post">
     <div class="form-group">
       <label for="title">제목</label>
       <input type="text" class="form-control" id="title"
@@ -59,10 +81,15 @@ function save_board() {
    <textarea class="form-control" rows="5" id="content"
     name="content" placeholder="내용 작성"></textarea>
     </div>
-      <div class="info">
-          <dt>파일 첨부</dt>
-          <input type="file" id="real-input" class="image_inputType_file" accept="img/*" required multiple>
-      </div>
+
+<!--       <input type="text" class="form-control" id="content_image" name="content_image">-->
+
+            <input type="file"   id="content_image" name="content_image" class="image_inputType_file" accept="img/*"  multiple>
+
+<!--      <div class="info">-->
+<!--          <dt>파일 첨부</dt>-->
+<!--&lt;!&ndash;          <input type="file" id="realinput" class="image_inputType_file" accept="img/*" required multiple>&ndash;&gt;-->
+<!--      </div>-->
     <button type="submit" class="btn btn-default">작성</button>
   </form>
 </div>
