--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_boards.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage_sorting.css') }}">
 
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!--        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>-->
+
+<!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">-->
+
 
 
 </head>
@@ -59,12 +62,15 @@
     </div>
 </div>
 
+
 <div  class="board__parent" id="feed">
-    <a class="board" href="#">
+{% for i in data_lists %}
+
+    <a class="board" href="/post/url({{ i[0] }}">
         <div
                 class="content__thumbnail"
                 style="
-              background-image: url(https://images.unsplash.com/photo-1670105791108-718c8d4b738e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80);
+              background-image: url({{i[3]}});
             "
         ></div>
         <!-- <img
@@ -75,22 +81,20 @@
         <!-- 여기서부터 content 제목div, 서브div, 작성일div -->
         <div class="content__text">
             <div class="content__title">
-                함께 일하고 싶은 사람 - 1. 업무 습관
+               {{ i[1] }}
             </div>
 
             <div class="content__sub">
-                경력을 시작한 지 2년 쯤 지났을 때, 팀장님이 질문했습니다. “함께
-                일하고 싶은 사람은 어떤 사람일까요?”괜찮은 대답을 하지 못
-                했습니다.
+               {{ i[2] }}
             </div>
-            <div class="content__date">2022년 11월 9일 | 14개의 댓글</div>
+            <div class="content__date">{{ i[5] }}</div>
         </div>
 
         <!-- 여기서부터 유저 정보 -->
         <div class="user">
             <div>
                 <img class="user__avatar" src="" alt=""/>
-                <span class="user__name">by ninto_2</span>
+                <span class="user__name">by {{ i[4] }}</span>
             </div>
             <div>
                 <i class="fas fa-heart"></i>
@@ -98,77 +102,89 @@
             </div>
         </div>
     </a>
+    {% endfor %}
+
 </div>
 
 
+<nav aria-label="Page navigation example">
+    {{ pagination.links | safe }}
 
+
+<!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>-->
+
+<!--&lt;!&ndash;     Option 2: Separate Popper and Bootstrap JS&ndash;&gt;-->
+
+<!--    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>-->
 
 </body>
-<script>
-    const  feed = document.querySelector('#feed');
-    let a = ``
-    axios.get('/feed')
-        .then(function (response) {
-            // 성공 핸들링
-            console.log(response);
-             response.data.map((feed) => {
+<!--<script>-->
+<!--    const  feed = document.querySelector('#feed');-->
+<!--    let a = ``-->
+<!--    axios.get('/feed')-->
+<!--        .then(function (response) {-->
+<!--            // 성공 핸들링-->
+<!--            console.log(response);-->
+<!--             response.data.map((feed) => {-->
 
-             a += `<a class="board" href="#">
-        <div
-                class="content__thumbnail"
-                style="
-              background-image: url(${feed[3]});
-            "
-        ></div>
-        <!-- <img
-          class="content__thumbnail"
-          src="https://images.unsplash.com/photo-1670105791108-718c8d4b738e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"
-        /> -->
+<!--             a += `<a class="board" href="#">-->
+<!--        <div-->
+<!--                class="content__thumbnail"-->
+<!--                style="-->
+<!--              background-image: url(${feed[3]});-->
+<!--            "-->
+<!--        ></div>-->
+<!--        &lt;!&ndash; <img-->
+<!--          class="content__thumbnail"-->
+<!--          src="https://images.unsplash.com/photo-1670105791108-718c8d4b738e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"-->
+<!--        /> &ndash;&gt;-->
 
-        <!-- 여기서부터 content 제목div, 서브div, 작성일div -->
-        <div class="content__text">
-            <div class="content__title">
-                ${feed[1]}
-            </div>
+<!--        &lt;!&ndash; 여기서부터 content 제목div, 서브div, 작성일div &ndash;&gt;-->
+<!--        <div class="content__text">-->
+<!--            <div class="content__title">-->
+<!--                ${feed[1]}-->
+<!--            </div>-->
 
-            <div class="content__sub">
-                ${feed[2]}
-            </div>
-            <div class="content__date">${feed[5]}</div>
-        </div>
+<!--            <div class="content__sub">-->
+<!--                ${feed[2]}-->
+<!--            </div>-->
+<!--            <div class="content__date">${feed[5]}</div>-->
+<!--        </div>-->
 
-        <!-- 여기서부터 유저 정보 -->
-        <div class="user">
-            <div>
-                <img class="user__avatar" src="" alt=""/>
-                <span class="user__name">by  ${feed[4]} </span>
+<!--        &lt;!&ndash; 여기서부터 유저 정보 &ndash;&gt;-->
+<!--        <div class="user">-->
+<!--            <div>-->
+<!--                <img class="user__avatar" src="" alt=""/>-->
+<!--                <span class="user__name">by  ${feed[4]} </span>-->
 
-            </div>
-            <div>
-                <i class="fas fa-heart"></i>
-                <span>789</span>
-            </div>
-        </div>
-    </a>`
-            })
-              feed.innerHTML = a
-        })
-        .catch(function (error) {
-            // 에러 핸들링
-            console.log(error);
-        })
-        .then(function () {
-            // 항상 실행되는 영역
-        });
+<!--            </div>-->
+<!--            <div>-->
+<!--                <i class="fas fa-heart"></i>-->
+<!--                <span>789</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </a>`-->
+<!--            })-->
+<!--              feed.innerHTML = a-->
+<!--        })-->
+<!--        .catch(function (error) {-->
+<!--            // 에러 핸들링-->
+<!--            console.log(error);-->
+<!--        })-->
+<!--        .then(function () {-->
+<!--            // 항상 실행되는 영역-->
+<!--        });-->
 
-</script>
+<!--</script>-->
 
 <script
         src="https://kit.fontawesome.com/af8a64a43c.js"
         crossorigin="anonymous"
 ></script>
 {% endblock %}
-
 
 
 
