--- a/templates/main.html
+++ b/templates/main.html
@@ -66,7 +66,7 @@
 <div  class="board__parent" id="feed">
 {% for i in data_lists %}
 
-    <a class="board" href="/post/url({{ i[0] }}">
+    <a class="board" href="/post/{{ i[0] }}">
         <div
                 class="content__thumbnail"
                 style="
