--- a/static/css/mainpage_nav.css
+++ b/static/css/mainpage_nav.css
@@ -8,7 +8,14 @@ nav {
   align-items: center;
 
   cursor: pointer;
+
 }
+
+nav > a {
+  text-decoration: none;
+}
+
+
 
 .nav__column:nth-child(1) {
   color:#575a5e;
