--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -11,7 +11,7 @@
     <a href="/" class="nav__column">I-log</a>
     <div class="nav__column">
         {% if login == True %}
-        <h3>{{name}}의 일상</h3>
+        <h3>{{name}}님의 마이페이지</h3>
         <a href="write" class="nav__column--login-btn">글쓰기</a>
         <a href="logout" class="nav__column--login-btn">로그아웃</a>
         {% else %}
