--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -5,7 +5,7 @@
 .mypage_main {
     width: 100%;
     height: 100%;
-    text-align: center;
+    
     margin: auto;
     margin-top: -4%;
 }
@@ -15,17 +15,17 @@
     height: 7rem;
     margin: auto;
     padding: 30px;
-    text-align: center;
+    
     /*border: 1px solid #000;*/
 }
 
 .mypage_mid {
-    width: 30%;
+    width: 35%;
     height: 58rem;
     margin: 100px auto;
     padding: 30px;
-    text-align: center;
-    /*border: 1px solid #000;*/
+    
+    background: white;
     position: relative;
 }
 
@@ -59,11 +59,12 @@
 }
 
 .mypage_name {
-    width: 30%;
+    width: 35%;
     height: 15%;
     margin: 20px auto 20px auto;
     /*border: 1px solid #000;*/
-    text-align: center;
+    top: -10vh;
+    
     line-height: 3rem;
     font-size: 1.3rem;
     position: absolute;
@@ -72,11 +73,11 @@
 }
 
 .mypage_email {
-    width: 30%;
+    width: 35%;
     height: 15%;
     margin: 20px auto 20px auto;
     /*border: 1px solid #000;*/
-    text-align: center;
+    
     line-height: 3rem;
     font-size: 1.3rem;
     position: absolute;
@@ -85,11 +86,11 @@
 }
 
 .mypage_gender {
-    width: 30%;
+    width: 35%;
     height: 15%;
     margin: 20px auto 20px auto;
     /*border: 1px solid #000;*/
-    text-align: center;
+    
     line-height: 3rem;
     font-size: 1.3rem;
     position: absolute;
@@ -98,11 +99,11 @@
 }
 
 .mypage_location {
-    width: 30%;
+    width: 35%;
     height: 15%;
     margin: 20px auto 20px auto;
     /*border: 1px solid #000;*/
-    text-align: center;
+    
     line-height: 3rem;
     font-size: 1.3rem;
     position: absolute;
@@ -111,11 +112,11 @@
 }
 
 .mypage_intro {
-    width: 30%;
+    width: 35%;
     height: 15%;
     margin: 20px auto 20px auto;
     /*border: 1px solid #000;*/
-    text-align: center;
+    
     line-height: 3rem;
     font-size: 1.3rem;
     position: absolute;
@@ -134,16 +135,17 @@
     position: absolute;
     left: 8vw;
     top: 70vh;
+    color: white;
 }
 
 .mybtn, .homebtn {
     width: 7rem;
     height: 3rem;
     border-radius: 15px;
-    border-width: 1px;
-    border-radius: 15px;
-    border-width: 1px;
+    border: 1px solid white;
     /*border: 1px solid #000;*/
+    background-color: #4CAF50;
+    text-decoration: none;
 }
 
 .mybtn, .homebtn > a {
@@ -164,3 +166,15 @@ a {
     /*background-color: aqua;*/
 }
 
+body {
+    background: #76b852; /* fallback for old browsers */
+    background: rgb(141, 194, 111);
+    background: linear-gradient(90deg, rgba(141, 194, 111, 1) 0%, rgba(118, 184, 82, 1) 50%);
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+div > hr {
+    margin-top: -1px;
+}
